--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
         <div class="site_logo">
             <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png"></a>
         </div>
-        <nav class="main_navigation ul-li">
+        <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
                 <li><a href="index.html">首頁</a></li>
                 <li class="dropdown">
                     <a href="#">貸款服務</a>
-                    <ul class="dropdown-menu clearfix">
-                        <li><a href="#">免TU快速批核</a></li>
-                        <li><a href="#">業務資金周轉</a></li>
-                        <li><a href="#">自僱人士貸款</a></li>
+                    <ul class="dropdown-menu clearfix manucolor" >
+                        <li><a href="tufree%20fast.html">免TU快速批核</a></li>
+                        <li><a href="business%20cash.html">業務資金周轉</a></li>
+                        <li><a href="self%20employed.html">自僱人士貸款</a></li>
                         <li><a href="#">卡數結餘轉戶</a></li>
                     </ul>
                 </li>
@@ -96,9 +96,9 @@
                                 貸款服務
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">免TU快速批核</a></li>
-                                <li><a href="#">業務資金周轉</a></li>
-                                <li><a href="#">自僱人士貸款</a></li>
+                                <li><a href="tufree%20fast.html">免TU快速批核</a></li>
+                                <li><a href="business%20cash.html">業務資金周轉</a></li>
+                                <li><a href="self%20employed.html">自僱人士貸款</a></li>
                                 <li><a href="#">卡數結餘轉戶</a></li>
                             </ul>
                         </li>
@@ -116,17 +116,12 @@
 <!-- Start of Slider section
 	============================================= -->
 <section class="slider_section relative-position" id="slider_area">
-    <div class="slider_style_one owl-carousel relative-position" id="slider_id">
+    <!--<div class="slider_style_one owl-carousel relative-position" id="slider_id">
         <div class="slider_priview" data-background="assets/img/slider/s1.jpg">
             <div class="background_overlay"></div>
             <div class="slider_contect_box text-center">
                 <div class="slider_text headline pera-content">
-                    <p style="font-size: 20px;">業務資金周轉</p>
-                    <h1 style="font-size: 40px;">提供靈活方案，助各行業人士
-                        拓展業務及彈性周轉！<br><br>
-                        無須抵押，手續簡便<br><br>
-                        無業務經營模式（不限獨資、合資或有限公司)
-                        或文件限制</h1>
+                    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
                 </div>
             </div>
         </div>
@@ -134,14 +129,30 @@
             <div class="background_overlay"></div>
             <div class="slider_contect_box text-center">
                 <div class="slider_text headline pera-content">
-                    <p style="font-size: 28px;">兔TU，免露面</p>
-                    <h1 style="font-size: 40px;">真正免露面<br><br>
-                        15mins快批<br><br>
-                        貸款額高達10萬
-                    </h1>
+                    <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
                 </div>
             </div>
         </div>
+    </div>-->
+
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="assets/img/slider/s1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="assets/img/slider/s2.jpg" alt="Second slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 </section>
 <!-- ENd of Slider section
@@ -150,11 +161,11 @@
 <section class="service_page_section" id="service_page">
     <div class="container">
         <div class="section_title_area text-center headline pera-content">
-            <p>
+            <h2>
                 <span class="title_shape_left"></span>
                 浚賢特惠貸款
                 <span class="title_shape_right"></span>
-            </p>
+            </h2>
         </div>
         <div class="service_content_two mt-5">
             <div class="row">
@@ -170,7 +181,7 @@
                         </div>
                         <div class="service_text_two headline pera-content text-center">
                             <h3><a href="#">免TU快批貸款</a></h3>
-                            <button type="button" value="Submit" class="btn btn-dark">了解更多</button>
+                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
                         </div>
                     </div>
                 </div>
@@ -186,7 +197,7 @@
                         </div>
                         <div class="service_text_two headline pera-content text-center">
                             <h3><a href="#">企業資金周轉</a></h3>
-                            <button type="button" value="Submit" class="btn btn-dark">了解更多</button>
+                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
                         </div>
                     </div>
                 </div>
@@ -202,7 +213,7 @@
                         </div>
                         <div class="service_text_two headline pera-content text-center">
                             <h3><a href="#">自僱人士貸款</a></h3>
-                            <button type="button" value="Submit" class="btn btn-dark">了解更多</button>
+                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
                         </div>
                     </div>
                 </div>
@@ -218,7 +229,7 @@
                         </div>
                         <div class="service_text_two headline pera-content text-center">
                             <h3><a href="#">卡數結餘轉戶</a></h3>
-                            <button type="button" value="Submit" class="btn btn-dark">了解更多</button>
+                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
                         </div>
                     </div>
                 </div>
@@ -233,7 +244,7 @@
     <div class="container">
         <div class="section_title_area text-center headline pera-content">
             <h2>
-                Why US？
+                為什麼是我們？
             </h2>
         </div>
         <div class="team_member_content">
