--- a/businesscash.html
+++ b/businesscash.html
@@ -39,17 +39,6 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="header_follow_social float-right ul-li">
-						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-behance"></i></a></li>
-							<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-						</ul>
-					</div>
-				</div>
 			</div>
 		</div>
 		<!-- /header_top -->
@@ -63,13 +52,13 @@
 					<li class="dropdown">
 						<a href="#">貸款服務</a>
 						<ul class="dropdown-menu clearfix manucolor" >
-							<li><a href="tufree%20fast.html">免TU快速批核</a></li>
-							<li><a href="business%20cash.html">業務資金周轉</a></li>
-							<li><a href="self%20employed.html">自僱人士貸款</a></li>
-							<li><a href="#">卡數結餘轉戶</a></li>
+							<li><a href="tufreefast.html">免TU快速批核</a></li>
+							<li><a href="businesscash.html">業務資金周轉</a></li>
+							<li><a href="selfemployed.html">自僱人士貸款</a></li>
+							<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
 						</ul>
 					</li>
-					<li><a href="#">聯絡我們</a></li>
+					<li><a href="contactus.html">聯絡我們</a></li>
 				</ul>
 			</nav>
 			<!-- /nav Menu -->
@@ -96,13 +85,13 @@
 									貸款服務
 								</a>
 								<ul class="dropdown-menu">
-									<li><a href="tufree%20fast.html">免TU快速批核</a></li>
-									<li><a href="business%20cash.html">業務資金周轉</a></li>
-									<li><a href="self%20employed.html">自僱人士貸款</a></li>
-									<li><a href="#">卡數結餘轉戶</a></li>
+									<li><a href="tufreefast.html">免TU快速批核</a></li>
+									<li><a href="businesscash.html">業務資金周轉</a></li>
+									<li><a href="selfemployed.html">自僱人士貸款</a></li>
+									<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
 								</ul>
 							</li>
-							<li><a href="#">聯絡我們</a></li>
+							<li><a href="contactus.html">聯絡我們</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -121,7 +110,7 @@
 			<p class="breadcrumb_title">
 				企業資金周轉貸款</p>
 			<div>
-				<h5 class="text-white text-center">經濟不景氣，現金流不足成為一大難題！<br>
+				<h5 class="text-white text-center" style="line-height: 40px;">經濟不景氣，現金流不足成為一大難題！<br>
 					浚賢信貸針對各行各業中小企貸款需要，<br>
 					批出合適貸款，助你解決資金周轉問題。</h5>
 			</div>
@@ -199,7 +188,7 @@
 						</div>
 					</div>
 					<div class="sub-button  text-uppercase">
-						<button type="submit" value="Submit">立即申請</button>
+						<a href="contactus.html"><button type="submit" value="Submit">立即申請</button></a>
 					</div> 
 				</form>
 			</div>
@@ -214,17 +203,6 @@
 		<div class="container">
 			<div class="footer_copyright_content">
 				<div class="row">
-					<div class="col-lg-4 col-md-12">
-						<div class="footer_social ul-li clearfix">
-							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fab fa-behance"></i></a></li>
-								<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-							</ul>
-						</div>
-					</div>
 					<div class="col-lg-4 col-md-12">
 						<div class="footer_logo text-center">
 							<a href="index.html"><img src="assets/img/logo/flogo-1.png" alt=""></a>
