--- a/index.html
+++ b/index.html
@@ -39,17 +39,6 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="header_follow_social float-right ul-li">
-                    <ul>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
     <!-- /header_top -->
@@ -63,10 +52,10 @@
                 <li class="dropdown">
                     <a href="#">貸款服務</a>
                     <ul class="dropdown-menu clearfix manucolor" >
-                        <li><a href="tufree%20fast.html">免TU快速批核</a></li>
-                        <li><a href="business%20cash.html">業務資金周轉</a></li>
-                        <li><a href="self%20employed.html">自僱人士貸款</a></li>
-                        <li><a href="#">卡數結餘轉戶</a></li>
+                        <li><a href="tufreefast.html">免TU快速批核</a></li>
+							<li><a href="businesscash.html">業務資金周轉</a></li>
+							<li><a href="selfemployed.html">自僱人士貸款</a></li>
+							<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
                     </ul>
                 </li>
                 <li><a href="#">聯絡我們</a></li>
@@ -81,7 +70,7 @@
         </div>
         <div class="mobile_menu_wrap">
             <div class="mobile_menu_overlay open_mobile_menu"></div>
-            <div class="mobile_menu_content">
+            <div class="mobile_menu_content" style="z-index: 100px;">
                 <div class="mobile_menu_close open_mobile_menu">
                     <i class="fas fa-window-close"></i>
                 </div>
@@ -96,10 +85,10 @@
                                 貸款服務
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="tufree%20fast.html">免TU快速批核</a></li>
-                                <li><a href="business%20cash.html">業務資金周轉</a></li>
-                                <li><a href="self%20employed.html">自僱人士貸款</a></li>
-                                <li><a href="#">卡數結餘轉戶</a></li>
+                                <li><a href="tufreefast.html">免TU快速批核</a></li>
+									<li><a href="businesscash.html">業務資金周轉</a></li>
+									<li><a href="selfemployed.html">自僱人士貸款</a></li>
+									<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
                             </ul>
                         </li>
                         <li><a href="#">聯絡我們</a></li>
@@ -163,7 +152,7 @@
         <div class="section_title_area text-center headline pera-content">
             <h2>
                 <span class="title_shape_left"></span>
-                浚賢特惠貸款
+                特惠貸款
                 <span class="title_shape_right"></span>
             </h2>
         </div>
@@ -322,17 +311,6 @@
     <div class="container">
         <div class="footer_copyright_content">
             <div class="row">
-                <div class="col-lg-4 col-md-12">
-                    <div class="footer_social ul-li clearfix">
-                        <ul>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="footer_logo text-center">
                         <a href="index.html"><img alt="" src="assets/img/logo/flogo-1.png"></a>
