--- a/tufreefast.html
+++ b/tufreefast.html
@@ -18,6 +18,34 @@
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/video.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<style>
+		/* For Desktop View */
+		@media screen and (min-width: 1024px) {
+			.header-title{
+				font-size: 45px;
+				line-height: 75px;
+			}
+		}
+
+		/* For Tablet View */
+		@media screen and (min-device-width: 768px)
+		and (max-device-width: 1024px) {
+			.header-title{
+				font-size: 38px;
+				line-height: 70px;
+			}
+		}
+
+		/* For Mobile Portrait View */
+		@media screen and (max-device-width: 480px)
+		and (orientation: portrait) {
+			.mblview{
+				padding-left: 55px;
+				margin-top: 25px;
+			}
+		}
+
+	</style>
 </head>
 
 <body>
@@ -39,17 +67,6 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="header_follow_social float-right ul-li">
-						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-behance"></i></a></li>
-							<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-							<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-						</ul>
-					</div>
-				</div>
 			</div>
 		</div>
 		<!-- /header_top -->
@@ -63,13 +80,13 @@
 					<li class="dropdown">
 						<a href="#">貸款服務</a>
 						<ul class="dropdown-menu clearfix manucolor" >
-							<li><a href="tufree%20fast.html">免TU快速批核</a></li>
-							<li><a href="business%20cash.html">業務資金周轉</a></li>
-							<li><a href="self%20employed.html">自僱人士貸款</a></li>
-							<li><a href="#">卡數結餘轉戶</a></li>
+							<li><a href="tufreefast.html">免TU快速批核</a></li>
+							<li><a href="businesscash.html">業務資金周轉</a></li>
+							<li><a href="selfemployed.html">自僱人士貸款</a></li>
+							<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
 						</ul>
 					</li>
-					<li><a href="#">聯絡我們</a></li>
+					<li><a href="contactus.html">聯絡我們</a></li>
 				</ul>
 			</nav>
 			<!-- /nav Menu -->
@@ -96,13 +113,13 @@
 									貸款服務
 								</a>
 								<ul class="dropdown-menu">
-									<li><a href="tufree%20fast.html">免TU快速批核</a></li>
-									<li><a href="business%20cash.html">業務資金周轉</a></li>
-									<li><a href="self%20employed.html">自僱人士貸款</a></li>
-									<li><a href="#">卡數結餘轉戶</a></li>
+									<li><a href="tufreefast.html">免TU快速批核</a></li>
+									<li><a href="businesscash.html">業務資金周轉</a></li>
+									<li><a href="selfemployed.html">自僱人士貸款</a></li>
+									<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
 								</ul>
 							</li>
-							<li><a href="#">聯絡我們</a></li>
+							<li><a href="contactus.html">聯絡我們</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -144,7 +161,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6 col-md-12">
+					<div class="col-lg-6 col-md-12 mblview">
 						<div class="about_details_text">
 							<p>
 
@@ -170,34 +187,33 @@
 			<div class="about_practice_content">
 				<div class="row">
 					<div class="col-lg-4 col-md-6">
-						<div class="about_practice_icontext">
-							<div class="about_practice_icon float-left">
-								<i class="flaticon-crime-scene"></i>
+						<div class="row">
+							<div class="col-md-6 col-3 text-md-right my-auto">
+								<img src="assets/img/logo/18+.png">
 							</div>
-							<div class="about_practice_text headline pera-content">
-								<p> 須年滿18歲</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="about_practice_icontext">
-							<div class="about_practice_icon float-left">
-								<i class="flaticon-autonomous-car"></i>
-							</div>
-							<div class="about_practice_text headline pera-content">
-								<p>必須是香港居民</p>
+							<div class="col-6 my-auto text-left"style="padding-left: 0 !important;">
+								<h3>須年滿18歲</h3>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6">
-						<div class="about_practice_icontext">
-							<div class="about_practice_icon float-left">
-								<i class="flaticon-lotus"></i>
+						<div class="row">
+							<div class="col-md-6 col-3 text-md-right my-auto">
+								<img src="assets/img/logo/llocation.png">
 							</div>
-							<div class="about_practice_text headline pera-content">
-								<p>有穩定工作及償還能力</p>
+							<div class="col-6 my-auto text-left"style="padding-left: 0 !important;">
+								<h3>必須是香港居民</h3>
 							</div>
-
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="row">
+							<div class="col-md-6 col-3 text-md-right my-auto">
+								<img src="assets/img/logo/loan.png">
+							</div>
+							<div class="col-6 my-auto text-left"style="padding-left: 0 !important;">
+								<h3>有穩定工作及償還能力</h3>
+							</div>
 						</div>
 
 					</div>
@@ -206,7 +222,7 @@
 				</div>
 		<div class="container">
 			<div class="text-center pt-5">
-				<button type="button" value="Submit" class="btn btncolor">立即申請</button>
+				<a href="contactus.html"><button type="button" value="Submit" class="btn btncolor">立即申請</button></a>
 			</div>
 		</div>
 	</section>
@@ -220,17 +236,6 @@
 		<div class="container">
 			<div class="footer_copyright_content">
 				<div class="row">
-					<div class="col-lg-4 col-md-12">
-						<div class="footer_social ul-li clearfix">
-							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fab fa-behance"></i></a></li>
-								<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-							</ul>
-						</div>
-					</div>
 					<div class="col-lg-4 col-md-12">
 						<div class="footer_logo text-center">
 							<a href="index.html"><img src="assets/img/logo/flogo-1.png" alt=""></a>
