--- a/businesscash.html
+++ b/businesscash.html
@@ -129,7 +129,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="faq_area faq_shadow">
-									<div id="collapse01" class="collapse show" aria-labelledby="heading01" data-parent="#accordionExample">
+									<div class="collapse show" aria-labelledby="heading01" data-parent="#accordionExample">
 										<div class="faq-body">
                                           <img src="assets/img/service/ttt.jpg">
 										</div>
