--- a/contactus.html
+++ b/contactus.html
@@ -121,7 +121,7 @@
 
 <!-- Start of Faq section
 	============================================= -->
-<section id="faq_area" class="faq_section">
+<section id="faq_area" class="faq_section mb-5">
     <div class="container">
         <div id="tabsContent" class="tab-content">
             <div id="payment" class="tab-pane fade active show">
