--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>浚賢信貸｜ 凱峰信貸有限公司</title>
     <link href="assets/img/logo/ficon.png" rel="shortcut icon" type="image/x-icon">
-    <meta content="themexriver" name="author">
-    <meta content="Rexlaw - Law Attorney HTML Template" name="description">
-    <meta content="	accountant, adviser, advocate, attorney, barrister, business, consultant, counsel, finance, justice, law, law firm, lawyer, legal, solicitor"
+    <meta content="浚賢信貸｜ 凱峰信貸有限公司" name="author">
+    <meta content="浚賢信貸｜ 凱峰信貸有限公司" name="description">
+    <meta content="浚賢信貸｜ 凱峰信貸有限公司"
           name="keywords">
     <!-- Mobile Specific Meta -->
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -53,12 +53,12 @@
                     <a href="#">貸款服務</a>
                     <ul class="dropdown-menu clearfix manucolor" >
                         <li><a href="tufreefast.html">免TU快速批核</a></li>
-							<li><a href="businesscash.html">業務資金周轉</a></li>
-							<li><a href="selfemployed.html">自僱人士貸款</a></li>
-							<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
+                        <li><a href="businesscash.html">業務資金周轉</a></li>
+                        <li><a href="selfemployed.html">自僱人士貸款</a></li>
+                        <li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
                     </ul>
                 </li>
-                <li><a href="#">聯絡我們</a></li>
+                <li><a href="contactus.html">聯絡我們</a></li>
             </ul>
         </nav>
         <!-- /nav Menu -->
@@ -86,12 +86,12 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="tufreefast.html">免TU快速批核</a></li>
-									<li><a href="businesscash.html">業務資金周轉</a></li>
-									<li><a href="selfemployed.html">自僱人士貸款</a></li>
-									<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
+                                <li><a href="businesscash.html">業務資金周轉</a></li>
+                                <li><a href="selfemployed.html">自僱人士貸款</a></li>
+                                <li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">聯絡我們</a></li>
+                        <li><a href="contactus.html">聯絡我們</a></li>
                     </ul>
                 </nav>
             </div>
