--- a/contactus.html
+++ b/contactus.html
@@ -48,7 +48,7 @@
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
-                <li><a href="index.html">首頁</a></li>
+
                 <li class="dropdown">
                     <a href="#">貸款服務</a>
                     <ul class="dropdown-menu clearfix manucolor" >
@@ -75,11 +75,13 @@
                     <i class="fas fa-window-close"></i>
                 </div>
                 <div class="m-brand-logo text-center">
-                    <img alt="" src="assets/img/logo/logo-1.png">
+                    <a href="index.html">
+                        <img alt="" src="assets/img/logo/logo-1.png">
+                    </a>
                 </div>
                 <nav class="main-navigation  clearfix ul-li">
                     <ul class="navbar-nav text-capitalize clearfix" id="main-nav">
-                        <li><a href="index.html">首頁</a></li>
+
                         <li class="dropdown">
                             <a href="#">
                                 貸款服務
@@ -232,7 +234,7 @@
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="copyright_text text-right">
-                        Copyright By @ <a href="%21.html#">Themexriver</a> - 2020
+                        Copyright By @ <a href="#">Triumphant Credit Limited</a> - 2022
                     </div>
                 </div>
             </div>
