--- a/easyfastloan.html
+++ b/easyfastloan.html
@@ -49,7 +49,7 @@
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
-                <li><a href="index.html">首頁</a></li>
+
                 <li class="dropdown">
                     <a href="#">貸款服務</a>
                     <ul class="dropdown-menu clearfix manucolor">
@@ -76,11 +76,13 @@
                     <i class="fas fa-window-close"></i>
                 </div>
                 <div class="m-brand-logo text-center">
-                    <img alt="" src="assets/img/logo/logo-1.png">
+                    <a href="index.html">
+                        <img alt="" src="assets/img/logo/logo-1.png">
+                    </a>
                 </div>
                 <nav class="main-navigation  clearfix ul-li">
                     <ul class="navbar-nav text-capitalize clearfix" id="main-nav">
-                        <li><a href="index.html">首頁</a></li>
+
                         <li class="dropdown">
                             <a href="#">
                                 貸款服務
@@ -133,12 +135,12 @@
                 為什麼要​​進行結餘轉<br>戶？
             </h2>
             <div class="pt-5">
-                <p>
+                <p class="text-content">
                     卡數結餘轉戶可以將申請人手頭上各項欠債 (信用卡欠款及貸款等) 集中處理。
                     月息遠低於借貸人只清還最低還款額（Min Pay）所累積的利息。
                 </p>
                 <div>
-                    <p>
+                    <p class="text-content">
                         不少人以 Min Pay還卡數，但信用卡實際年利率一般超過30%，所帶來的利息負擔沉重。如卡主長期只繳付最低還款額(Min
                         Pay)，利息及欠款便會累積。由於債務問題始終未能徹底解決，因此會對信貸評級(TU)造成負面影響。
                     </p>
@@ -150,7 +152,7 @@
                                 <img src="assets/img/service/45.png">
                             </div>
                             <div class="col-9 my-auto text-left" style="padding-left: 0 !important;">
-                                <p>浚賢信貸 - 卡數一筆清計劃</p>
+                                <p class="text-content">浚賢信貸 - 卡數一筆清計劃</p>
                             </div>
                         </div>
                     </div>
@@ -162,17 +164,10 @@
                                 <div class="accordion" id="accordionExample">
                                     <div class="row">
                                         <div class="col-md-6 mt-5">
-                                            <div class="row">
-                                                <div class="col-6 text-right my-auto">
-                                                    <img src="assets/img/logo/repaypent.png">
-                                                </div>
-                                                <div class="col-6 my-auto text-left"
-                                                     style="padding-left: 0 !important;">
-                                                    <h3>貸款特點</h3>
-                                                </div>
-                                            </div>
-                                            <div class="pt-3">
-                                                <h3 style="font-size: 20px;">
+                                            <img src="assets/img/logo/repaypent.png">
+                                            <h3 class="text-content mt-3">貸款特點</h3>
+                                            <div class="pt-3 text-left">
+                                                <h3 class="text-content">
                                                     ・計算出最有效率的清卡數方案<br>
                                                     ・節省利息開支<br>
                                                     ・有助改善TU
@@ -181,17 +176,10 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6 mt-5">
-                                            <div class="row">
-                                                <div class="col-6 text-right my-auto">
-                                                    <img src="assets/img/logo/document.png">
-                                                </div>
-                                                <div class="col-6 my-auto text-left"
-                                                     style="padding-left: 0 !important;">
-                                                    <h3>所需文件：</h3>
-                                                </div>
-                                            </div>
+                                            <img src="assets/img/logo/document.png">
+                                            <h3 class="text-content mt-3">所需文件：</h3>
                                             <div class="pt-3">
-                                                <h3 style="font-size: 20px;">
+                                                <h3 class="text-content text-left">
                                                     ・月入不少於HK$5,000之薪金證明<br>
                                                     ・身份證<br>
                                                     ・住址證明<br>
@@ -240,7 +228,7 @@
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="copyright_text text-right">
-                        Copyright By @ <a href="%21.html#">Themexriver</a> - 2020
+                        Copyright By @ <a href="#">Triumphant Credit Limited</a> - 2022
                     </div>
                 </div>
             </div>
