--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
-                <li><a href="index.html">首頁</a></li>
+
                 <li class="dropdown">
                     <a href="#">貸款服務</a>
                     <ul class="dropdown-menu clearfix manucolor" >
@@ -75,11 +75,13 @@
                     <i class="fas fa-window-close"></i>
                 </div>
                 <div class="m-brand-logo text-center">
-                    <img alt="" src="assets/img/logo/logo-1.png">
+                    <a href="index.html">
+                        <img alt="" src="assets/img/logo/logo-1.png">
+                    </a>
                 </div>
                 <nav class="main-navigation  clearfix ul-li">
                     <ul class="navbar-nav text-capitalize clearfix" id="main-nav">
-                        <li><a href="index.html">首頁</a></li>
+
                         <li class="dropdown">
                             <a href="#">
                                 貸款服務
@@ -169,8 +171,10 @@
                             </div>
                         </div>
                         <div class="service_text_two headline pera-content text-center">
-                            <h3><a href="#">免TU快批貸款</a></h3>
-                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
+                            <h3><a href="tufreefast.html">免TU快批貸款</a></h3>
+                            <a href="tufreefast.html">
+                            <button type="button" class="btn btncolor">了解更多</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -185,8 +189,10 @@
                             </div>
                         </div>
                         <div class="service_text_two headline pera-content text-center">
-                            <h3><a href="#">企業資金周轉</a></h3>
-                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
+                            <h3><a href="businesscash.html">企業資金周轉</a></h3>
+                            <a href="businesscash.html">
+                            <button type="button" class="btn btncolor">了解更多</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -201,8 +207,11 @@
                             </div>
                         </div>
                         <div class="service_text_two headline pera-content text-center">
-                            <h3><a href="#">自僱人士貸款</a></h3>
-                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
+                            <h3><a href="selfemployed.html">自僱人士貸款</a></h3>
+                            <a href="selfemployed.html">
+                                <button type="button" class="btn btncolor">了解更多</button>
+                            </a>
+
                         </div>
                     </div>
                 </div>
@@ -217,8 +226,11 @@
                             </div>
                         </div>
                         <div class="service_text_two headline pera-content text-center">
-                            <h3><a href="#">卡數結餘轉戶</a></h3>
-                            <button type="button" value="Submit" class="btn btncolor">了解更多</button>
+                            <h3><a href="easyfastloan.html">卡數結餘轉戶</a></h3>
+                            <a href="easyfastloan.html">
+                                <button type="button" class="btn btncolor">了解更多</button>
+                            </a>
+
                         </div>
                     </div>
                 </div>
