--- a/selfemployed.html
+++ b/selfemployed.html
@@ -78,7 +78,7 @@
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
-                <li><a href="index.html">首頁</a></li>
+
                 <li class="dropdown">
                     <a href="#">貸款服務</a>
                     <ul class="dropdown-menu clearfix manucolor" >
@@ -105,11 +105,13 @@
                     <i class="fas fa-window-close"></i>
                 </div>
                 <div class="m-brand-logo text-center">
-                    <img alt="" src="assets/img/logo/logo-1.png">
+                    <a href="index.html">
+                        <img alt="" src="assets/img/logo/logo-1.png">
+                    </a>
                 </div>
                 <nav class="main-navigation  clearfix ul-li">
                     <ul class="navbar-nav text-capitalize clearfix" id="main-nav">
-                        <li><a href="index.html">首頁</a></li>
+
                         <li class="dropdown">
                             <a href="#">
                                 貸款服務
@@ -193,7 +195,7 @@
     <div class="container">
         <div class="section_title_area text-center headline pera-content">
             <div class="pt-5">
-                <p>
+                <p class="text-content">
                     想借錢但無收入證明？<br>
 
                     貸款文件審查需時，應付不到緊急周轉需要 ？<br><br>
@@ -236,7 +238,7 @@
                 </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="copyright_text text-right">
-                        Copyright By @ <a href="%21.html#">Themexriver</a> - 2020
+                        Copyright By @ <a href="#">Triumphant Credit Limited</a> - 2022
                     </div>
                 </div>
             </div>
