--- a/tufreefast.html
+++ b/tufreefast.html
@@ -76,7 +76,7 @@
 			</div>
 			<nav class="main_navigation ul-li manucolor">
 				<ul class="nav justify-content-end">
-					<li><a href="index.html">首頁</a></li>
+
 					<li class="dropdown">
 						<a href="#">貸款服務</a>
 						<ul class="dropdown-menu clearfix manucolor" >
@@ -103,11 +103,13 @@
 						<i class="fas fa-window-close"></i>
 					</div>
 					<div class="m-brand-logo text-center">
-						<img alt="" src="assets/img/logo/logo-1.png">
+						<a href="index.html">
+							<img alt="" src="assets/img/logo/logo-1.png">
+						</a>
 					</div>
 					<nav class="main-navigation  clearfix ul-li">
 						<ul class="navbar-nav text-capitalize clearfix" id="main-nav">
-							<li><a href="index.html">首頁</a></li>
+
 							<li class="dropdown">
 								<a href="#">
 									貸款服務
@@ -154,7 +156,7 @@
 								指尖上的貸款
 							</h2>
 							<div class="pt-5">
-								<p>▰ 免TU<br>
+								<p class="text-content">▰ 免TU<br>
 									▰ 真正免露面<br>
 									▰ 15mins快批<br>
 									▰貸款額高達10萬</p>
@@ -163,7 +165,7 @@
 					</div>
 					<div class="col-lg-6 col-md-12 mblview">
 						<div class="about_details_text">
-							<p>
+							<p class="text-content">
 
 							▰ 快速/短時間批核，非常適合急需資金週轉人士申請。<br>
 
@@ -243,7 +245,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12">
 						<div class="copyright_text text-right">
-							Copyright By @ <a href="%21.html#">Themexriver</a> - 2020
+							Copyright By @ <a href="%21.html#">Triumphant Credit Limited</a> - 2020
 						</div>
 					</div>
 				</div>
