Update from web

--- a/tufreefast.html
+++ b/tufreefast.html
@@ -23,7 +23,7 @@
 		@media screen and (min-width: 1024px) {
 			.header-title{
 				font-size: 45px;
-				line-height: 75px;
+				line-height: 65px;
 			}
 		}
 
@@ -37,10 +37,8 @@
 		}
 
 		/* For Mobile Portrait View */
-		@media screen and (max-device-width: 480px)
-		and (orientation: portrait) {
+		@media screen and (max-device-width: 480px) {
 			.mblview{
-				padding-left: 55px;
 				margin-top: 25px;
 			}
 		}
@@ -137,7 +135,7 @@
 	<section id="breadcrumb" class="breadcrumb_section relative-position" data-background="assets/img/background/brbg.jpg">
 		<div class="background_overlay"></div>
 		<div class="container">
-			<p class="breadcrumb_title">信貸記錄底子花，
+			<p class="breadcrumb_title">信貸記錄底子花，<br>
 				申請破產係唯一出路⋯⋯？</p>
 		</div>
 	</section>
