error solve theme

--- a/selfemployed.html
+++ b/selfemployed.html
@@ -160,7 +160,7 @@
                 <div class="accordion" id="accordionExample">
                     <div class="row">
                         <div class="col-md-6 my-auto text-right pr-4">
-                                <div id="collapse01" class="collapse show" aria-labelledby="heading01" data-parent="#accordionExample">
+                                <div class="collapse show" aria-labelledby="heading01" data-parent="#accordionExample">
                                         <h2 class="header-title">
                                             創業・拓展・轉型<br>
                                             營運資金想借就借！
