--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="mobile_menu_wrap">
             <div class="mobile_menu_overlay open_mobile_menu"></div>
-            <div class="mobile_menu_content" style="z-index: 100px;">
+            <div class="mobile_menu_content">
                 <div class="mobile_menu_close open_mobile_menu">
                     <i class="fas fa-window-close"></i>
                 </div>
